; ModuleID = '/home/carl/AnghaBench/wcdb/repair/extr_sqliterk.c_sqliterkNotify_onEndParsePage.c'
source_filename = "/home/carl/AnghaBench/wcdb/repair/extr_sqliterk.c_sqliterkNotify_onEndParsePage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__, i32 }
%struct.TYPE_5__ = type { i32 (%struct.TYPE_6__*, i32)* }

@sqliterk_status_checked = common dso_local global i32 0, align 4
@sqliterk_status_damaged = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Cancelled parsing page %d.\00", align 1
@SQLITERK_MISUSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [36 x i8] c"Cannot parse page %d. Invalid type.\00", align 1
@sqliterk_status_invalid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32*, i32, i32)* @sqliterkNotify_onEndParsePage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sqliterkNotify_onEndParsePage(%struct.TYPE_6__* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %10 = icmp ne %struct.TYPE_6__* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %4
  br label %55

12:                                               ; preds = %4
  %13 = load i32, i32* %8, align 4
  switch i32 %13, label %31 [
    i32 128, label %14
    i32 129, label %21
    i32 130, label %28
  ]

14:                                               ; preds = %12
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @sqliterk_status_checked, align 4
  %20 = call i32 @sqliterkPagerSetStatus(i32 %17, i32 %18, i32 %19)
  br label %41

21:                                               ; preds = %12
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* @sqliterk_status_damaged, align 4
  %27 = call i32 @sqliterkPagerSetStatus(i32 %24, i32 %25, i32 %26)
  br label %41

28:                                               ; preds = %12
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @sqliterkOSDebug(i32 130, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %29)
  br label %41

31:                                               ; preds = %12
  %32 = load i32, i32* @SQLITERK_MISUSE, align 4
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @sqliterkOSWarning(i32 %32, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), i32 %33)
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 8
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* @sqliterk_status_invalid, align 4
  %40 = call i32 @sqliterkPagerSetStatus(i32 %37, i32 %38, i32 %39)
  br label %41

41:                                               ; preds = %31, %28, %21, %14
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 0
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 0
  %45 = load i32 (%struct.TYPE_6__*, i32)*, i32 (%struct.TYPE_6__*, i32)** %44, align 8
  %46 = icmp ne i32 (%struct.TYPE_6__*, i32)* %45, null
  br i1 %46, label %47, label %55

47:                                               ; preds = %41
  %48 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %49 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 0
  %51 = load i32 (%struct.TYPE_6__*, i32)*, i32 (%struct.TYPE_6__*, i32)** %50, align 8
  %52 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %53 = load i32, i32* %7, align 4
  %54 = call i32 %51(%struct.TYPE_6__* %52, i32 %53)
  br label %55

55:                                               ; preds = %11, %47, %41
  ret void
}

declare dso_local i32 @sqliterkPagerSetStatus(i32, i32, i32) #1

declare dso_local i32 @sqliterkOSDebug(i32, i8*, i32) #1

declare dso_local i32 @sqliterkOSWarning(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
